--- a/LancheMac/Views/Lanche/List.cshtml
+++ b/LancheMac/Views/Lanche/List.cshtml
@@ -1,5 +1,13 @@
 ﻿@model IEnumerable<LancheMac.Models.Lanche>
-
+    <form asp-action="Index" method="get">
+        <div class="form-actions no-color">
+            <p>
+                Procurar por nome : <input type="text" name="filtro" value="@ViewData["filtro"]" />
+                <input type="submit" value="Procurar" class="btn btn-default" /> |
+                <a asp-action="Index">Retornar para lista</a>
+            </p>
+        </div>
+    </form>
     <div>
         <h2>Todos os Lanches</h2>
     </div>
