--- a/LanchesMac/Views/Lanche/Details.cshtml
+++ b/LanchesMac/Views/Lanche/Details.cshtml
@@ -11,7 +11,7 @@
                 <p class="card-text"><h5>@Model.DescricaoDetalhada</h5></p>
                 <p class="btn btn-group align-content-lg-end">
                     <a asp-controller="Lanche" asp-action="List"
-                       class="btn btn-outline-info">Ver todos os lanches</a>
+                       class="btn btn-outline-info">Ver todos os Lanches</a>
                     <a class="btn btn-primary" id="cartButton" asp-controller="CarrinhoCompra"
                        asp-action="AdicionarItemNoCarrinhoCompra" asp-route-lancheId="@Model.LancheId">
                         Adicionar @Model.Nome ao carrinho
