--- a/LanchesMac/Views/Shared/_Carousel.cshtml
+++ b/LanchesMac/Views/Shared/_Carousel.cshtml
@@ -9,6 +9,9 @@
     <div class="carousel-item">
       <img src="~/images/carousel13.jpg" class="d-block w-100" alt="">
     </div>
+    <div class="carousel-item">
+        <img src="~/images/hambuger_carrossel2.jpg" class="d-block w-100" alt="">
+    </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselLanches" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
