--- a/LanchesMac/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    @await Html.PartialAsync("_PartialLogin")
                     @await Component.InvokeAsync("CarrinhoCompraResumo")                 
                     @await Component.InvokeAsync("CategoriaMenu")
                     <a class="nav-link text-light" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
@@ -29,6 +30,7 @@
                             <input type="text" class="form-control" placeholder="Procurar produto" name="searchString" value="@ViewData["searchString"]">
                         </div>
                     </form>
+                   
                 </div>
             </div>
         </nav>
