--- a/LanchesMac/Views/Account/Login.cshtml
+++ b/LanchesMac/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
 
 <table class="table">
     <tr>
-        <td><img src="~/images/Home-iconred.png" alt="Fazer o Login" class="center-block" /></td>
+        <td><img src="~/images/Login_Acesso.png" alt="Fazer o Login" class="center-block" height="225" width="225  " /></td>
         <td>
             <div class="row">
                 <div class="col-10 col-md-10 col-lg-10">
