Ajuste na implementação na área de administração.

--- a/LanchesMac/Views/Account/Register.cshtml
+++ b/LanchesMac/Views/Account/Register.cshtml
@@ -2,7 +2,7 @@
 
 <table class="table">
     <tr>
-        <td><img src="~/images/Login_Acesso.png" alt="Registrar Usuário" /></td>
+        <td><img src="~/images/Login_Acesso.png" alt="Registrar Usuário" class="center-block" height="225" width="225"/></td>
         <td>
             <div class="row">
                 <div class="col-10 col-md-10 col-lg-10">
