--- a/LanchesMac/Views/Shared/_PartialLogin.cshtml
+++ b/LanchesMac/Views/Shared/_PartialLogin.cshtml
@@ -4,6 +4,7 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    <img src="~/images/emersonFt.gif" alt="Avatar" style="width:40px"/>
     <form asp-area="" asp-controller="Account" asp-action="Logout" id="logoutForm"
       method="post" class="navbar-left">
         <ul class="nav navbar-nav navbar-left">
