--- a/LanchesMac/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
+                <img src="~/images/Logo_Marca__1_-removebg-preview.png" width="40" height="40" />
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     Hobs Lanches
                 </a>
@@ -18,7 +19,14 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">                
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    @await Html.PartialAsync("_PartialImagemLogin")
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a class="nav-link text-light" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
+                    }
+
+                    @await Html.PartialAsync("_PartialLogin")
                     @await Component.InvokeAsync("CarrinhoCompraResumo")                 
                     @await Component.InvokeAsync("CategoriaMenu")
                     <a class="nav-link text-light" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
@@ -28,8 +36,7 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Procurar produto" name="searchString" value="@ViewData["searchString"]">
                         </div>
-                    </form>
-                    @await Html.PartialAsync("_PartialLogin")
+                    </form>                   
                 </div>
             </div>
         </nav>
