--- a/LanchesMac/Areas/Admin/Views/AdminLanches/Delete.cshtml
+++ b/LanchesMac/Areas/Admin/Views/AdminLanches/Delete.cshtml
@@ -65,7 +65,7 @@
     <hr />
     <form asp-action="Delete">
         <input type="hidden" asp-for="LancheId" />
-        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <input type="submit" value="Deletar" class="btn btn-outline-danger" /> |
         <a asp-action="Index" class="btn btn-outline-info">Retornar</a>
     </form>
 </div>
