--- a/LanchesMac/Areas/Admin/Views/AdminLanches/Edit.cshtml
+++ b/LanchesMac/Areas/Admin/Views/AdminLanches/Edit.cshtml
@@ -68,9 +68,9 @@
         </div>
     </div>
 
-    <hr />
+    <br />
     <div class="form-group">
-        <input type="submit" value="Salvar" class="btn btn-primary" />
+        <input type="submit" value="Salvar" class="btn btn-outline-success" />
         <a asp-action="Index" class="btn btn-outline-info">Retornar</a>
     </div>
 </form>
