--- a/LanchesMac/Areas/Admin/Views/AdminLanches/Index.cshtml
+++ b/LanchesMac/Areas/Admin/Views/AdminLanches/Index.cshtml
@@ -95,7 +95,7 @@
                 <td class="col-3">
                     <a asp-action="Edit" asp-route-id="@item.LancheId">Edita</a> |
                     <a asp-action="Details" asp-route-id="@item.LancheId">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.LancheId">Deleta</a>
+                    <a style="color:red" asp-action="Delete" asp-route-id="@item.LancheId">Excluir</a>
                 </td>
             </tr>
         }
