--- a/LanchesMac/Areas/Admin/Views/AdminCategorias/Delete.cshtml
+++ b/LanchesMac/Areas/Admin/Views/AdminCategorias/Delete.cshtml
@@ -3,31 +3,29 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Deletar Categoria</h1>
-
-<h3>Tem certeza de que deseja excluir isso?</h3>
+<h3>Deseja deletar esta categoria ?</h3>
 <div>
-    <h4>Categoria</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.CategoriaNome)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.CategoriaNome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Descricao)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
     </dl>
-    
+    <hr />
     <form asp-action="Delete">
         <input type="hidden" asp-for="CategoriaId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Retornar a lista</a>
+        <input type="submit" value="Deletar" class="btn btn-outline-danger" /> |
+        <a asp-action="Index" class="btn btn-outline-info">Retornar</a>
+
     </form>
 </div>
+
